# my-masters-degree

./: .$ConvTTS.drawio.bkp  .$ConvTTS.drawio.dtmp  .env  .gitignore  ConvTTS.drawio  GEMINI.md  README.md  projeto.tex  pyproject.toml  test_pandera_schema.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
my-masters-degree/: __init__.py  extract_from_pdf.py  main.py  process_dataset.py
my_masters_degree/: extract_from_pdf.py  main.py  postprocess_dataset.py  process_dataset.py  process_metadata.py  sampling_mupetalks.py  utils.py
my_masters_degree/taskmaster-analysis/: Task1_EDA_Taskmaster.md  Task2_EDA_Refinement.md  eda_taskmaster_hf.py  execution_log_20260221_202927.md  execution_plan_task1.md
notebooks/: MupeTalk.ipynb  TESTE_DEV_TRAIN_mupe_metadados_289.xlsx - df_full6.csv  magicdata.ipynb  mupe-dataset.ipynb  mupe_metadata_sp_gender_slice.csv  mupe_metadata_sp_gender_slice_reviewed.csv  mupe_train_sample_postprocessed_final.xlsx  mupe_train_sample_with_subsections.xlsx  mupetalk_train.csv  mupetalk_train_v2.csv  quali.csv  quali2.csv  quali3.csv  quali3.tex  roteiro_entrevista.md  trabalho_comercio_mupe_train_859.csv
notebooks/excel_files/: mupe_train_sample_32.xlsx  mupe_train_sample_416.xlsx  mupe_train_sample_419.xlsx  mupe_train_sample_425.xlsx  mupe_train_sample_468.xlsx  mupe_train_sample_484.xlsx  mupe_train_sample_496.xlsx  mupe_train_sample_498.xlsx  mupe_train_sample_507.xlsx  mupe_train_sample_515.xlsx  mupe_train_sample_517.xlsx  mupe_train_sample_791.xlsx  mupe_train_sample_794.xlsx  mupe_train_sample_795.xlsx  mupe_train_sample_808.xlsx  mupe_train_sample_824.xlsx  mupe_train_sample_842.xlsx  mupe_train_sample_847.xlsx  mupe_train_sample_852.xlsx  mupe_train_sample_853.xlsx  mupe_train_sample_856.xlsx  mupe_train_sample_857.xlsx  mupe_train_sample_879.xlsx  mupe_train_sample_881.xlsx  mupe_train_sample_889.xlsx  mupe_train_sample_891.xlsx  mupe_train_sample_897.xlsx  mupe_train_sample_907.xlsx
notebooks/interview_segmentations/: interview_segmentation_32.json  interview_segmentation_34.json  interview_segmentation_394.json  interview_segmentation_399.json  interview_segmentation_402.json  interview_segmentation_416.json  interview_segmentation_419.json  interview_segmentation_425.json  interview_segmentation_427.json  interview_segmentation_429.json  interview_segmentation_461.json  interview_segmentation_469.json  interview_segmentation_470.json  interview_segmentation_475.json  interview_segmentation_476.json  interview_segmentation_484.json  interview_segmentation_498.json  interview_segmentation_506.json  interview_segmentation_515.json  interview_segmentation_523.json  interview_segmentation_526.json  interview_segmentation_752.json  interview_segmentation_758.json  interview_segmentation_769.json  interview_segmentation_785.json  interview_segmentation_791.json  interview_segmentation_794.json  interview_segmentation_795.json  interview_segmentation_808.json  (+56 more)
tests/: __init__.py  test_sampling_mupetalks.py
(+9 files in other folders)
