[project]
name = "my-masters-degree"
version = "0.1.0"
description = "A Python project for my masters degree research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.57.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "rich>=14.2.0",
    "werpy>=3.1.0",
]
authors = [
    {name = "Antonio", email = "antonionmoreira@gmail.com"}
]
keywords = ["research", "masters", "thesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
